# CardStudyTool

./: .gitignore  CMakeLists.txt  Makefile  README.md  flashcards.json  flashcards_1_4.json  main.cpp
flashcards/: flashcards_1_4.json  flashcards_5_12.json  flashcards_econ_chapter_1.json  flashcards_econ_chapter_2.json  flashcards_econ_chapter_3.json
